--- a/Areas/Manager/Views/Home/Index.cshtml
+++ b/Areas/Manager/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
     <div class="alert alert-primary" role="alert" style="padding: 1rem 1rem 0rem 1rem">
         <p class="alert-heading" style="display: flex;justify-content: space-between;">
             <span><i class="fa fa-info-circle" aria-hidden="true"></i> Note</span>
-            <span><button class="btn btn-sm btn-outline-primary float-right" onclick="toggleNoteContent()"><i class="fa fa-chevron-down ms-auto"></i></button></span>
+            <span><button class="btn btn-sm btn-outline-primary float-right" onclick="toggleNoteContent()"><i class="fa fa-chevron-down ms-auto" title="Expand"></i></button></span>
         </p>
 
         <!-- Hidden content to be toggled -->
