--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -49,7 +49,7 @@
                 <i class="icon fas fa-tasks"></i>
                 <div class="card-details">
                     <span class="card-title" style="margin:5px">Ongoing Tasks:</span>
-                    <span class="card-value" style="margin:5px">@ViewBag.NoOfTasks</span>
+                    <span class="card-value" style="margin:5px"><a asp-area="Manager" asp-controller="Home" asp-action="Index" style="text-decoration:none;">@ViewBag.NoOfTasks</a></span>
                 </div>
             </div>
             <div class="card">
