--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -30,14 +30,18 @@
 <body>
     <div style="display:flex;height:100vh;width:100%">
             <div id="leftpanel" style="flex:1; background-color:#0a051a;display:flex; flex-direction:column; align-items:center; justify-content:center; gap:10px;">
-                
-                <!-- Top-left corner branding container -->
-                <div style="position: absolute; top: 10px; left: 10px; display: flex; align-items: center;">
+                <div style="position: absolute; top: 10px; left: 10px; display: flex; align-items: center; color: white;">
                     <img src="~/favicon.ico" alt="Logo" style="height:30px;" />
-                    <a href="#" style="margin-left: 10px; font-weight: bold; font-size: 18px; text-decoration: none; color: white;">
-                        DevTaskFlow
-                    </a>
+                    <div style="margin-left: 10px; display: flex; flex-direction: column;">
+                        <a href="#" style="font-weight: bold; font-size: 18px; text-decoration: none; color: white;">
+                            SkillForgeX
+                        </a>
+                        <span style="font-size: 12px; font-weight: normal; color: #ddd;">
+                            AI-Powered Task Assigner
+                        </span>
+                    </div>
                 </div>
+
 
                 @if (ViewBag.ValidationErrorMessage != null)
                 {
@@ -79,7 +83,7 @@
                             <div class="form-group row mb-2">
                                 @Html.LabelFor(m => m.UserName, htmlAttributes: new { @class = "col-sm-3 col-form-label", style = "color: white;" })
                                 <div class="col-sm-9">
-                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", id = "txtUserName" })
+                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", id = "txtUserName", maxlength = 25 })
                                 </div>
                             </div>
 
@@ -88,7 +92,7 @@
                                 <div class="form-group row mb-2">
                                         @Html.LabelFor(m => m.Password, htmlAttributes: new { @class = "col-sm-3 col-form-label", style = "color: white;" })
                                     <div class="col-sm-9">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", id = "txtPassword" })
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", id = "txtPassword", maxlength = 25 })
                                     </div>
                                 </div>
                             }
