--- a/Areas/Developer/Views/Home/Index.cshtml
+++ b/Areas/Developer/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using DevTaskFlow.Areas.Developer.ViewModels;
+﻿@using SkillForgeX.Areas.Developer.ViewModels;
 @model IEnumerable<UserTaskViewModel>
 
 @{
