--- a/Views/Home/Feedback.cshtml
+++ b/Views/Home/Feedback.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Ping Me";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@using DevTaskFlow.ViewModels;
+@using SkillForgeX.ViewModels;
 @model FeedbackViewModel;
 
 <style>
