--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "login";
 }
 
-@using DevTaskFlow.ViewModels;
+@using SkillForgeX.ViewModels;
 @model UserTypeViewModel;
 
 <head>
@@ -15,6 +15,10 @@
 </head>
 
 <style>
+    body {
+        margin-bottom: auto;
+    }
+
     .back-link {
         text-decoration: none;
         color: inherit;
