--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Signup";
 }
 
-@using DevTaskFlow.ViewModels;
+@using SkillForgeX.ViewModels;
 @model LoginViewModel;
 
 <head>
@@ -15,6 +15,11 @@
 </head>
 
 <style>
+
+    body {
+        margin-bottom: auto;
+    }
+
     .back-link {
         text-decoration: none;
         color: inherit;
