--- a/Areas/Admin/Views/Home/UpdateTask.cshtml
+++ b/Areas/Admin/Views/Home/UpdateTask.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 
-@using DevTaskFlow.Areas.Admin.ViewModels;
+@using SkillForgeX.Areas.Admin.ViewModels;
 @model EditTaskViewModel;
 
 <head>
