--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using DevTaskFlow
-@using DevTaskFlow.Models
+﻿@using SkillForgeX
+@using SkillForgeX.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
