--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/DevTaskFlow.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/SkillForgeX.styles.css" asp-append-version="true" />
     @* used font style *@
     <link rel="stylesheet" href="~/css/font-family.css" />
     @* contain sidepanel & main UI page *@
