--- a/Areas/Admin/Views/Home/UpdateTask.cshtml
+++ b/Areas/Admin/Views/Home/UpdateTask.cshtml
@@ -154,7 +154,7 @@
         </div>
     }
 
-    <form asp-action="UpdateTask" asp-controller="Home" asp-area="Admin" method="post">
+    <form asp-action="UpdateTask" id="UpdateTask" asp-controller="Home" asp-area="Admin" method="post">
 
         <!-- Project Dropdown -->
         <div class="form-group row mb-3">
@@ -263,7 +263,7 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-9">
                 <button type="submit" class="btn btn-outline-success">Save</button>
-                <button type="button" class="btn btn-outline-danger ms-2" onclick="parent.closeSidePanel()">Cancel</button>
+                <button type="button" class="btn btn-outline-secondary ms-2" onclick="document.getElementById('UpdateTask').reset();">Cancel</button>
             </div>
         </div>
     </form>
