--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -180,7 +180,7 @@
     </button>
     <footer class="footer text-muted text-center py-3" style="width: 105% !important;line-height: 1% !important">
         <div class="container">
-            &copy; 2025 - DevTaskFlow
+            &copy; 2025 - SkillForgeX
         </div>
     </footer>
 
