--- a/Views/Home/ProjectOverview.cshtml
+++ b/Views/Home/ProjectOverview.cshtml
@@ -47,7 +47,7 @@
 </style>
 
 <div class="project-overview-card" style="margin:1% 0% 0% 5%;max-width:90%; background:#f2f2f2 !important">
-    <h1 style="margin-bottom: 3%;">Introducing SkillForgeX</h1>
+    <h1 style="margin-bottom: 1%;">Introducing SkillForgeX</h1>
     <div style="display:flex;justify-content:space-between">
         <p><strong>AI-Powered Task Assigner for Developer Teams</strong></p>
         <a asp-area="" asp-controller="Home" asp-action="UserManual">How it works?</a>
@@ -135,6 +135,6 @@
             </tbody>
         </table>
 
-        <p><b>Developer-first design</b>: prevents mismatched work and protects against burnout</p>
+        <p class="mt-4"><b>Developer-first design</b>: prevents mismatched tasks and helps protect against burnout.</p>
     </section>
 </div>
