--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="~/css/font-awesome-icons.min.css" />
     @* loading spinner *@
     <link rel="stylesheet" href="~/css/waitMe.css" />
+    @* intro.js *@
+    <link rel="stylesheet" href="~/css/introjs.min.css" />
 
 
     <style>
@@ -189,6 +191,9 @@
     <script src="~/js/waitMe.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @* intro.js *@
+    <script src="~/js/intro.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
